# Python-Project-Template

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  main.py  pyproject.toml
.github/workflows/: pre-commit.yml
docs/: .gitignore  Makefile  README.md  conf.py  index.rst
