[tool.poetry]
name = "package-name"
version = "0.1.0"
description = "A template for a nice package"
authors = ["KiviCode <kivicode.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
mypy = "^1.9.0"
ruff = "^0.5.7"
pre-commit = "^3.6.2"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 110
indent-width = 4

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["D417"]
ignore = ["D202"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
