[tool.poetry]
name = "package-name"
version = "0.1.0"
description = "A template for a nice package"
authors = ["KiviCode <kivicode.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
ipykernel = "^6.29.5"

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true

[tool.ruff]
line-length = 110
indent-width = 4
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["D417", "F401", "UP"]
ignore = ["D202", "UP015", "UP035"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
